coupon api endpoints updated
