# src/routes/coupon.routes.ts
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import { getAvailableCoupon } from "../controllers/coupon.controller";
+
+const router = Router();
+
+router.get("/:userId", getAvailableCoupon);
+
+export default router;
